@@ -49,15 +49,17 @@ class OptAlgorithm:
         problem.
 
     init_node_pos : List[List[float]] or None
-        Coordinates of points at which the function value is known. If
-        None, the initial points will be generated by the
-        algorithm. This must be of length at least dimension + 1, if
-        provided.
+        Coordinates of points at which the function value is
+        known. These points will be added to the points generated by
+        the algorithm. If None, all the initial points will be
+        generated by the algorithm.
 
     init_node_val : List[float] or None
         Function values corresponding to the points given in
         init_node_pos. Should be None if the previous argument is
-        None.
+        None. If init_node_pos is not None but init_node_val is None,
+        the points in init_node_pos will be evaluated in the
+        initialization phase of the algorithm.
 
 
     Attributes
@@ -218,9 +220,8 @@ class OptAlgorithm:
         assert(len(var_lower) == dimension)
         assert(len(var_upper) == dimension)
         assert((len(integer_vars) == 0) or (max(integer_vars) < dimension))
-        assert(init_node_pos is None or 
-               (len(init_node_pos) == len(init_node_val) and
-                len(init_node_pos) >= dimension + 1))
+        assert(init_node_pos is None or init_node_val is None or
+               len(init_node_pos) == len(init_node_val))
 
         # Set the value of 'auto' parameters if necessary
         l_settings = settings.set_auto_parameters(dimension, var_lower,
@@ -273,8 +274,11 @@ class OptAlgorithm:
         # Round variable bounds to integer if necessary
         ru.round_integer_bounds(var_lower, var_upper, integer_vars)
 
-        # Save initial nodes
+        # Save initial nodes if given
         self.init_node_pos = init_node_pos
+        if (init_node_pos):
+            for point in self.init_node_pos:
+                ru.round_integer_vars(point, self.integer_vars)
         self.init_node_val = init_node_val
         # Initialize global lists
         self.all_node_pos, self.all_node_val = list(), list()
@@ -1249,37 +1253,57 @@ class OptAlgorithm:
                                    else 0)
         # Store the current number of nodes
         self.num_nodes_at_restart = len(self.all_node_pos)
-        if (self.itercount > 0 or self.init_node_pos is None):
-            # Compute a new set of starting points
-            node_pos = ru.initialize_nodes(self.l_settings, self.var_lower, 
-                                           self.var_upper, self.integer_vars)
-            if (self.current_mode == 'accurate' or
-                self.num_fast_restarts > self.l_settings.max_fast_restarts or
-                (self.fast_evalcount + self.n + 1 >=
-                 self.l_settings.max_fast_evaluations)):
-                if (pool is None):
-                    node_val = [objfun([self.bb, point, self.fixed_vars]) 
-                                for point in node_pos]
-                else:
-                    map_arg = [[self.bb, point, self.fixed_vars] 
-                               for point in node_pos]
-                    node_val = pool.map(objfun, map_arg)
-                self.evalcount += len(node_val)
+        # Compute a new set of starting points
+        node_pos = ru.initialize_nodes(self.l_settings, self.var_lower, 
+                                       self.var_upper, self.integer_vars)
+        if (self.current_mode == 'accurate' or
+            self.num_fast_restarts > self.l_settings.max_fast_restarts or
+            (self.fast_evalcount + self.n + 1 >=
+             self.l_settings.max_fast_evaluations)):
+            if (pool is None):
+                node_val = [objfun([self.bb, point, self.fixed_vars]) 
+                            for point in node_pos]
             else:
+                map_arg = [[self.bb, point, self.fixed_vars] 
+                           for point in node_pos]
+                node_val = pool.map(objfun, map_arg)
+            self.evalcount += len(node_val)
+        else:
+            if (pool is None):
+                node_val = [objfun_fast([self.bb, point, self.fixed_vars])
+                            for point in node_pos]
+            else:
+                map_arg = [[self.bb, point, self.fixed_vars] 
+                           for point in node_pos]
+                node_val = pool.map(objfun_fast, map_arg)
+            self.fast_evalcount += len(node_val)
+        self.node_is_fast = [self.current_mode == 'fast' 
+                             for val in node_val]
+        # Add user-provided points if this is the first iteration
+        if (self.init_node_pos is not None and self.itercount == 0):
+            # Determine which points can be added
+            dist = ru.bulk_get_min_distance(self.init_node_pos,
+                                            node_pos)
+            init_node_pos = [self.init_node_pos[i] 
+                             for i in range(len(self.init_node_pos)) 
+                             if dist[i] > self.l_settings.min_dist]
+            if (self.init_node_val is None):
                 if (pool is None):
-                    node_val = [objfun_fast([self.bb, point, self.fixed_vars])
-                                for point in node_pos]
+                    init_node_val = [objfun([self.bb, point, 
+                                             self.fixed_vars])
+                                     for point in init_node_pos]
                 else:
                     map_arg = [[self.bb, point, self.fixed_vars] 
-                               for point in node_pos]
-                    node_val = pool.map(objfun_fast, map_arg)
-                self.fast_evalcount += len(node_val)
-            self.node_is_fast = [self.current_mode == 'fast' 
-                                 for val in node_val]
-        else:
-            node_pos, node_val = self.init_node_pos, self.init_node_val
-            # Initial points provided by the user are 'accurate'.
-            self.node_is_fast = [False for val in node_val]
+                               for point in init_node_pos]
+                    init_node_val = pool.map(objfun, map_arg)
+                self.evalcount += len(init_node_val)
+            else:
+                init_node_val = [self.init_node_val[i] 
+                                 for i in range(len(self.init_node_pos)) 
+                                 if dist[i] > self.l_settings.min_dist]
+            node_pos.extend(init_node_pos)
+            node_val.extend(init_node_val)
+            self.node_is_fast.extend([False for val in init_node_val])
 
         self.all_node_pos.extend(node_pos)
         self.all_node_val.extend(node_val)
